--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="assets/images/super-mario-bros.jpg" alt="box art for super mario bros">
                 <table>
                     <tr>
-                        <th>
+                        <th colspan="2" align="left">
                             <strong>Release Date:</strong>
                         </th>
                     </tr>
@@ -114,7 +114,7 @@
                 <img src="assets/images/super-mario-bros-2-jp.jpg" alt="box art for super mariob bros 2 jp release">
                 <table>
                     <tr>
-                        <th>
+                        <th colspan="2" align="left">
                             <strong>Release Date:</strong>
                         </th>
                     </tr>
@@ -157,7 +157,7 @@
                 <img src="assets/images/super-mario-bros-2.jpg" alt="box art for super mario bros 2 western release">
                 <table>
                     <tr>
-                        <th>
+                        <th colspan="2" align="left">
                             <strong>Release Date:</strong>
                         </th>
                     </tr>
@@ -203,7 +203,7 @@
                 <img src="assets/images/super-mario-bros-3.jpg" alt="box art for super mario bros 3">
                 <table>
                     <tr>
-                        <th>
+                        <th colspan="2" align="left">
                             <strong>Release Date:</strong>
                         </th>
                     </tr>
