Added headings to game info sections, added h3 style to css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <!--The sections below contains the information for each game-->
         <section class="games-list">
             <!--The release-info divs contain the box art and release dates for each region-->
+            <h3>Super Mario Bros.</h3>
             <div class="release-info">
                 <img src="assets/images/super-mario-bros.jpg" alt="box art for super mario bros">
                 <table>
@@ -110,6 +111,7 @@
         </section>
         <hr>
         <section class="games-list">
+            <h3>Super Mario Bros. 2 (JP)</h3>
             <div class="release-info">
                 <img src="assets/images/super-mario-bros-2-jp.jpg" alt="box art for super mariob bros 2 jp release">
                 <table>
@@ -153,6 +155,7 @@
         </section>
         <hr>
         <section class="games-list">
+            <h3>Super Mario Bros. 2 (Western regions)</h3>
             <div class="release-info">
                 <img src="assets/images/super-mario-bros-2.jpg" alt="box art for super mario bros 2 western release">
                 <table>
@@ -199,6 +202,7 @@
         </section>
         <hr>
         <section class="games-list">
+            <h3>Super Mario Bros. 3</h3>
             <div class="release-info">
                 <img src="assets/images/super-mario-bros-3.jpg" alt="box art for super mario bros 3">
                 <table>
