Repositioned game info, changed game info spacing and image sizes for tablet and mobile

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="games-list">
             <h3>Super Mario Bros. 2 (JP)</h3>
             <div class="release-info">
-                <img src="assets/images/super-mario-bros-2-jp.jpg" alt="box art for super mariob bros 2 jp release">
+                <img src="assets/images/super-mario-bros-2-jp.jpg" alt="box art for super mariob bros 2 jp release" id="smb2-jp">
                 <table>
                     <tr>
                         <th colspan="2">
